tests/reference/asr-test_const_list_insert-4c81295.stderr
semantic error: Type name is not implemented yet.
 --> tests/errors/test_const_list_insert.py:7:5
  |
7 |     CONST_INTEGER_LIST.insert(3, 8)
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
